--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -14,14 +14,18 @@ body {
     background-image:url('/media/back3.png');
     height:100vh;
 }
-
+.jumbotron{
+  vertical-align: middle;
+  padding-top: 0px;
+  background-color:transparent ;
+}
 .texty{
   font-family: 'Work Sans', sans-serif;
 }
 
 .small{
   height: 50px;
-  padding-top: 10px;
+  padding-top: 1px;
   background-color: grey;
   padding-bottom: 0px;
   margin-top: 2px;
@@ -30,7 +34,9 @@ body {
   padding-left: 0px;
   padding-right: 0px;
 }
-
+.main{
+  background-color: ;
+}
 .header{
   color: white;
   align: center;
