--- a/school/templates/school/about.html
+++ b/school/templates/school/about.html
@@ -1,11 +1,44 @@
 {% extends "school/base.html" %}
 {% block title %}AboutUs{% endblock %}
 {% block content %}
-<div class="slideshow container" style="margin-bottom:17.5%;margin-top:2px">
-  {% for img in images %}
-    <img src="{{img.photo.url}}"height="199%" width="100%" style="border-radius:2px"/>
-  {% endfor %}
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    {% for img in images %}
+      {% if forloop.counter == 1 %}
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      {% else %}
+        <li data-target="#myCarousel" data-slide-to="{{forloop.counter}}"></li>
+      {% endif %}
+    {% endfor %}
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    {% for img in images %}
+      {% if forloop.counter == 1 %}
+        <div class="item active">
+          <img src="{{img.photo.url}}" height="500px"  style="border-radius:2px;width:100%;height:500px;">
+        </div>
+      {% else %}
+        <div class="item">
+          <img src="{{img.photo.url}}" height="500px"  style="border-radius:2px;width:100%;height:500px;">
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+
 
 <div class="jumbotron small header" align= 'center'>
   <h3>Vision</h3>
@@ -16,15 +49,15 @@
 <div class="jumbotron small header" align= 'center'>
   <h3>From The Principal's Desk</h3>
 </div>
-<img id="prin" src="/media/Princi.jpg" align="left" height="150px" style="margin-bottom:20px;border:2px outset #f5f5f5 ;margin-right:25px "alt="">
+<img id="prin" src="/media/Princi.jpg" align="left" height="150px" style="margin-bottom:50px;border:2px outset #f5f5f5 ;margin-right:25px "alt="">
 <p class='texty'>Our mission is ‘True to education’. Education is viewed with a holistic approach. Our endeavor is to :<br>
 
 1. Help students develop to their fullest potential, physically, mentally, emotionally, psychologically and spiritually.<br>
 2. Promote the development of basic skills, positive attitude, analytical thinking and inquiry based learning.<br>
-3. Imbibe in them the quality of appreciation and respect for cultural diversity.<br><br>
+3. Imbibe in them the quality of appreciation and respect for cultural diversity.<br><br><br>
 <em><strong>-Satender Kr. Sorout</strong></em></p>
 
-<div class="jumbotron small header" align= 'center'>
+<div class="jumbotron small header" align= 'center' style="margin-top:40px;padding-bottom:20px">
   <h3>Other Links</h3>
 </div>
 <table align=center style="border-collapse:separate;border-spacing:15px">
