--- a/school/templates/school/base.html
+++ b/school/templates/school/base.html
@@ -42,7 +42,7 @@ $(document).ready(function() {
         <h5 style="padding-top: 5px;">SECTOR 55, FARIDABAD</h5>
       </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-default">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="navbar-brand" href="{%url 'school:about'%}">Home</a></li>
