--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .navbar-custom {
-    background-color: #ff5500;
+    background-color: #87ceeb;
 }
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
