--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .navbar-custom {
-    background-color: #afeeee;
+    background-color: #eee9e9;
 }
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
