--- a/school/static/css/style.css
+++ b/school/static/css/style.css
@@ -13,7 +13,7 @@
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
-    color: rgba(255,255,255,.8);
+    color: black;
 }
 /* change the link color */
 .navbar-custom .navbar-nav .nav-link {
