--- a/school/templates/school/news_detail.html
+++ b/school/templates/school/news_detail.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="jumbotron">
 <div class="container" align='center'>
-  <center><h1 class='news'>{{news_details.title}}</h1><pre>                                           date:{{news_details.date|date:'d-m-Y'}}</pre></center>
+  <center><h1 class='news'>{{news_details.title}}</h1></center>
   {% if news_details.photo %}
   <img class = 'newsimg' src="{{news_details.photo.url}}" width="40%" align = 'center' alt="">
-  <figcaption>{{news_details.caption}}'</figcaption>
+  <figcaption>{{news_details.caption}}</figcaption>
   {% endif %}
 </div>
   <p class='texty'><br>{{news_details.desc}}<br></p>
