--- a/school/templates/school/base.html
+++ b/school/templates/school/base.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 <html>
   <head>
+    <meta name="google-site-verification" content="o129t027nt3LSmqAAgduEY2RcsRno9SmRmmfoDvujrI" />
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
