--- a/school/templates/school/base.html
+++ b/school/templates/school/base.html
@@ -39,7 +39,7 @@ $(document).ready(function() {
     <div class="container main">
       <div class="jumbotron header sm" id = 'aj' style="margin-bottom:2px"align='center'>
         <img src="/media/School Logo.jpg" style="border-radius:63px;" height="126px" width = "126px" alt="" align="left">
-        <h3 style="padding-top: 20px;">GOVT. MODEL SANSKRITI SENIOR SECONDARY SCHOOL</h3>
+        <h3 style="padding-top: 20px;">GOVT. MODEL SANSKRIT SENIOR SECONDARY SCHOOL</h3>
         <h5 style="padding-top: 5px;">SECTOR 55, FARIDABAD</h5>
       </div>
 
