--- a/school/templates/school/base.html
+++ b/school/templates/school/base.html
@@ -3,7 +3,6 @@
 <html>
   <head>
     <meta name="google-site-verification" content="o129t027nt3LSmqAAgduEY2RcsRno9SmRmmfoDvujrI" />
-    <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
@@ -39,7 +38,7 @@ $(document).ready(function() {
     <div class="container main">
       <div class="jumbotron header sm" id = 'aj' style="margin-bottom:2px"align='center'>
         <img src="/media/School Logo.jpg" style="border-radius:63px;" height="126px" width = "126px" alt="" align="left">
-        <h3 style="padding-top: 20px;">GOVT. MODEL SANSKRITI SENIOR SECONDARY SCHOOL</h3>
+        <h3 style="padding-top: 20px;">GOVERNMENT MODEL SANSKRITI SENIOR SECONDARY SCHOOL</h3>
         <h5 style="padding-top: 5px;">SECTOR 55, FARIDABAD</h5>
       </div>
 
